// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudyAvatar [NEGATIVE] should render with wrong props 1`] = `
.c0 {
  border-radius: 1.5625rem;
  height: 2.5rem;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  position: relative;
  background-color: transparent !important;
  opacity: 1;
}

.c0:hover {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
}

.c0:hover:active {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
  -webkit-filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
  filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
}

<body>
  <div>
    <div
      class="c0"
      color="unknown"
      data-testid="styled-avatar"
    >
      <svg
        data-testid="avatar-icon"
      />
    </div>
  </div>
</body>
`;

exports[`StudyAvatar [NEGATIVE] should render without props 1`] = `
.c0 {
  border-radius: 1.5625rem;
  height: 2.5rem;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  position: relative;
  background-color: transparent !important;
  opacity: 1;
}

.c0:hover {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
}

.c0:hover:active {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
  -webkit-filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
  filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
}

<body>
  <div>
    <div
      class="c0"
      data-testid="styled-avatar"
    >
      <svg
        data-testid="avatar-icon"
        fill="#000000"
      />
    </div>
  </div>
</body>
`;

exports[`StudyAvatar test studyAvatar render 1`] = `
.c0 {
  border-radius: 1.5625rem;
  height: 2.5rem;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  position: relative;
  background-color: transparent !important;
  opacity: 1;
}

.c0:hover {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
}

.c0:hover:active {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
  -webkit-filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
  filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
}

<body>
  <div>
    <div
      class="c0"
      color="primary"
      data-testid="styled-avatar"
    >
      <svg
        data-testid="avatar-icon"
        fill="#4475E3"
      />
    </div>
  </div>
</body>
`;

exports[`StudyAvatar test studyAvatar selected state 1`] = `
.c0 {
  border-radius: 1.5625rem;
  height: 3.875rem;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  position: relative;
  background-color: transparent !important;
  opacity: 1;
}

.c0:hover {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
}

.c0:hover:active {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
  -webkit-filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
  filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
}

<body>
  <div>
    <div
      class="c0"
      color="primary"
      data-testid="styled-avatar"
    >
      <svg
        data-testid="avatar-icon"
        fill="#4475E3"
      />
    </div>
  </div>
</body>
`;

exports[`StudyAvatar test studyAvatar selected state 2`] = `
.c0 {
  border-radius: 1.5625rem;
  height: 4.3125rem;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  position: relative;
  background-color: transparent !important;
  opacity: 1;
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
  -webkit-filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
  filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
  height: 4.3125rem;
}

.c0:hover {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
}

.c0:hover:active {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
  -webkit-filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
  filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
}

<body>
  <div>
    <div
      class="c0"
      color="primary"
      data-testid="styled-avatar"
    >
      <svg
        data-testid="avatar-icon"
        fill="#4475E3"
      />
    </div>
  </div>
</body>
`;
